guide/src/components/HtmlContent.module.scss
@import '~cultureamp-style-guide/styles/type';
@import '~cultureamp-style-guide/styles/color';
@import '~cultureamp-style-guide/styles/border';

.contentContainer {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p,
  ul,
  ol,
  blockquote {
    max-width: 650px;
  }
}

.htmlContent {
  composes: contentContainer;
}

.h1,
.htmlContent h1 {
  @include ca-type-ideal-title;
  margin-top: $ca-grid * 1.5;
  margin-bottom: $ca-grid;
}

.h2,
.htmlContent h2 {
  @include ca-type-ideal-display;
  margin-top: $ca-grid * 3;
  margin-bottom: $ca-grid;
}

.h3,
.htmlContent h3 {
  @include ca-type-ideal-heading;
  margin-top: 0;
  margin-bottom: $ca-grid;
}

.h4,
.htmlContent h4 {
  @include ca-type-ideal-heading;
  margin-top: 0;
  margin-bottom: $ca-grid;
  font-weight: $ca-weight-light;
}

.h5,
.htmlContent h5 {
  @include ca-type-ideal-body;
  font-weight: $ca-weight-semibold;
  margin-top: 0;
  margin-bottom: $ca-grid;
}

.h6,
.htmlContent h6 {
  @include ca-type-ideal-small;
  font-weight: $ca-weight-book;
  text-transform: uppercase;
  margin-top: 0;
  margin-bottom: 0;
}

.p,
.htmlContent p {
  margin: $ca-grid 0;
  @include ca-type-ideal-body;
  code,
  kbd,
  samp {
    // Default styles are "monospace", which will result in different line heights, breaking our vertical rhythm.
    padding: 0 0.25em;
    border-radius: $ca-border-radius;
    background-color: add-tint($ca-palette-ink, 70%);
    color: $ca-palette-ink;
    font-family: inherit;
  }
}

// Apply the styles to the paragraphs inside of .introParagraph, rather than to the .introParagraph element.
// This will prevent doubling up of baseline positioning.
.introParagraph p,
.introParagraph .p {
  @include ca-type-ideal-lede;
  margin: $ca-grid 0;
}

.table,
.htmlContent table {
  width: 100%;
  border-collapse: collapse;
  $padding: $ca-grid / 4;
  margin: ($ca-grid + $padding) 0;
  th {
    text-align: left;
    border-bottom: 2px solid $ca-border-color;
    padding: $padding 0 calc(#{$padding} - 2px) 0;
  }
  td {
    border-bottom: 1px solid $ca-border-color;
    padding: $padding 0 calc(#{$padding} - 1px) 0;
  }
  p:first-child {
    margin-top: 0;
  }
  p:last-child {
    margin-bottom: 0;
  }
}

.ul,
.ol,
.htmlContent ul,
.htmlContent ol {
  margin: $ca-grid 0;
}

.li,
.htmlContent li {
  @include ca-type-ideal-body;
  .h1,
  .h2,
  .h3,
  .h4,
  .h5,
  .p,
  .li {
    // Prevent the baseline transform from being applied twice.
    position: static;
  }
}

.blockquote,
.htmlContent blockquote {
  border-left: 2px solid $ca-border-color;
  margin-left: 20px;
  padding-left: 18px;
}

.buttonReset {
  appearance: none;
  display: inline;
  background: transparent;
  color: inherit;
  font: inherit;
  cursor: pointer;
  margin: 0;
  padding: 0;
  border: none;
}

.link,
.htmlContent a[href] {
  @include ca-type-ideal-body;
  color: $ca-link-text-color;
  text-decoration: none;
  &:hover,
  &:active,
  &:focus,
  &:visited {
    color: $ca-link-hover-text-color;
  }
  &:active,
  &:focus {
    outline-color: add-tint($ca-palette-wisteria, 30%);
    outline-offset: 2px;
  }

  // Make sure links inside a paragraph aren't baseline-adjusted twice.
  p & {
    position: static;
    font-size: inherit;
    line-height: inherit;
  }
}

.buttonLink {
  // Note: the definition of `.buttonReset` must come before the definition of `.link` in the source order,
  // as we want the styles in `.link` to take override those in `.buttonReset`.
  composes: buttonReset;
  composes: link;
  padding: 0 2px;
}

.img,
.htmlContent img {
  max-width: 100%;
}

.hr {
  border: none;
  border-bottom: 1px solid add-alpha($ca-palette-ink, 10%);
  margin-top: $ca-grid;
  margin-bottom: calc(#{$ca-grid * 2} - 1px);
}

// Hack for our design system website: the [[toc]] table-of-contents generator places the
// <div class="table-of-contents"> inside of a <p>, and this nesting breaks our baseline adjustments.
// The hack is to not re-apply the transforms on the children of the TOC.
:global(.table-of-contents) {
  .p,
  .li {
    position: static;
  }
}

